--- a/homework-04-spring-boot/src/main/resources/templates/product_form.html
+++ b/homework-04-spring-boot/src/main/resources/templates/product_form.html
@@ -40,8 +40,13 @@
                 <div class="form-group">
                     <label>Title</label>
                     <input th:field="*{title}" type="text" class="form-control" id="name" name="title" placeholder="Enter title">
+                    <p class="text-danger" th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></p>
+                </div>
+                <div class="form-group">
                     <label>Cost</label>
-                    <input th:field="*{cost}" type="text" class="form-control" id="name" name="cost" placeholder="Enter cost">
+                    <input th:field="*{cost}" type="text" class="form-control" id="cost" name="cost" placeholder="Enter cost">
+                    <p class="text-danger" th:if="${#fields.hasErrors('cost')}" th:errors="*{cost}"></p>
+
                 </div>
 
                 <button type="submit" class="btn btn-primary">Submit</button>
